--- a/app/build.gradle
+++ b/app/build.gradle
@@ -61,6 +61,9 @@ dependencies {
     implementation 'com.airbnb.android:lottie:3.0.7'
     implementation 'com.squareup.picasso:picasso:2.8'
     implementation 'com.pusher:pusher-java-client:2.2.1'
+    implementation 'com.google.android.libraries.places:places:2.6.0'
+    implementation 'cn.zhaiyifan:rememberedittext:0.9.0'
+
     //alert notification
     //implementation 'com.github.User:Repo:Tag'
    // implementation 'com.tapadoo.android:alerter:2.0.4'
